Ajustes na documentação de autenticação
